engine compiles again