@@ -22,53 +22,58 @@ import com.vladsch.flexmark.parser.Parser;
 import io.sapl.api.documentation.LibraryDocumentation;
 import lombok.NonNull;
 import lombok.experimental.UtilityClass;
-import lombok.extern.slf4j.Slf4j;
 
-@Slf4j
+/**
+ * Utilities for generating markdown documentation from library documentation.
+ */
 @UtilityClass
 public class MarkdownGenerator {
     private static final Parser       PARSER   = Parser.builder().build();
     private static final HtmlRenderer RENDERER = HtmlRenderer.builder().build();
 
-    public String generateMarkdownForLibrary(LibraryDocumentation documentation) {
-        final var sb = new StringBuilder();
-        sb.append("# ").append(documentation.getName()).append("\n\n");
-        sb.append(documentation.getDescription()).append("\n\n");
-        sb.append(documentation.getLibraryDocumentation()).append("\n\n");
-        sb.append("---\n\n");
-
-        for (var entry : documentation.getDocumentation().entrySet()) {
-            final var name = entry.getKey();
-            final var docs = entry.getValue();
-            sb.append("## ").append(name).append("\n\n");
-            sb.append(docs).append("\n\n---\n\n");
+    /**
+     * Generates markdown documentation for a library.
+     *
+     * @param library the library documentation
+     * @return the markdown string
+     */
+    public String generateMarkdownForLibrary(LibraryDocumentation library) {
+        var builder = new StringBuilder();
+        builder.append("# ").append(library.name()).append("\n\n");
+        builder.append(library.description()).append("\n\n");
+        if (library.documentation() != null && !library.documentation().isEmpty()) {
+            builder.append(library.documentation()).append("\n\n");
         }
-        return sb.toString();
+        builder.append("---\n\n");
+
+        for (var entry : library.entries()) {
+            builder.append("## ").append(entry.name()).append("\n\n");
+            if (entry.documentation() != null && !entry.documentation().isEmpty()) {
+                builder.append(entry.documentation()).append("\n\n");
+            }
+            builder.append("---\n\n");
+        }
+        return builder.toString();
     }
 
-    public String generateMarkdownForPolicyInformationPoint(
-            io.sapl.attributes.documentation.api.LibraryDocumentation pip) {
-        final var sb = new StringBuilder();
-        sb.append("# ").append(pip.namespace()).append("\n\n");
-        sb.append(pip.descriptionMarkdown()).append("\n\n");
-        sb.append(pip.documentationMarkdown()).append("\n\n");
-        sb.append("---\n\n");
-
-        for (var attribute : pip.attributes()) {
-            final var name = attribute.fullyQualifiedName();
-            final var docs = attribute.documentationMarkdown();
-            sb.append("## ").append(name).append("\n\n");
-            sb.append(docs).append("\n\n---\n\n");
-        }
-        return sb.toString();
-    }
-
+    /**
+     * Converts markdown to HTML.
+     *
+     * @param markdown the markdown string
+     * @return the HTML string
+     */
     public String markdownToHtml(@NonNull String markdown) {
-        final var document = PARSER.parse(markdown);
+        var document = PARSER.parse(markdown);
         return RENDERER.render(document);
     }
 
+    /**
+     * Wraps content in a div element.
+     *
+     * @param innerHtml the inner HTML content
+     * @return the wrapped HTML
+     */
     public String wrapInDiv(String innerHtml) {
-        return String.format("<div>%n%s%n</div>", innerHtml);
+        return "<div>%n%s%n</div>".formatted(innerHtml);
     }
 }
